--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "joi": "^18.0.2",
     "node-localstorage": "^3.0.5",
     "nodemon": "^3.1.11",
     "stripe": "^20.1.2",
