--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,7 +2,7 @@
 # These variables are safe to expose to the browser (prefixed with NEXT_PUBLIC_)
 
 # API Configuration
-NEXT_PUBLIC_API_URL=https://api.cleanops.com
+NEXT_PUBLIC_API_URL=https://clean-ops-alpha.vercel.app
 
 # Stripe Configuration
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_your_publishable_key_here
