production: use onrender url backend host

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Variables
 # These variables are safe to expose to the browser (prefixed with NEXT_PUBLIC_)
 
-# API Configuration
-NEXT_PUBLIC_API_URL=https://cleanops-8epb.onrender.com
+# API Configuration (base must include /api; frontend appends /auth/login, /orders, etc.)
+NEXT_PUBLIC_API_URL=https://cleanops-8epb.onrender.com/api
 
 # Stripe Configuration
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_your_publishable_key_here
