--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "backend",
+  "name": "cleanops-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "CleanOps backend API server",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "seed-test-db": "node scripts/seed-test-db.js",
-    "check-db": "node test-db-check.js"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "tsx watch src/server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.3",
+    "@supabase/supabase-js": "^2.93.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "joi": "^18.0.2",
-    "node-localstorage": "^3.0.5",
-    "nodemon": "^3.1.11",
-    "uuid": "^13.0.0"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "expressjs": "^1.0.1",
+    "node-cron": "^3.0.3",
+    "socket.io": "^4.6.1",
+    "stripe": "^14.10.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.5",
+    "@types/node-cron": "^3.0.11",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   }
 }
