--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
     "@types/node-cron": "^3.0.11",
+    "nodemon": "^3.1.11",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
